--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,15 @@
   <build>
   <plugins>
     <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.10.1</version>
+      <configuration>
+          <source>21</source>
+          <target>21</target>
+      </configuration>
+    </plugin> 
+    <plugin>
       <groupId>org.codehaus.mojo</groupId>
       <artifactId>exec-maven-plugin</artifactId>
       <version>3.1.0</version>
